// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
<svg
  class="Illustration"
  data-test-id="cf-ui-illustration"
  height="1em"
  viewBox="0 0 24 24"
  width="1em"
>
  <g
    fill="none"
    stroke="#000"
    stroke-linejoin="round"
    stroke-miterlimit="10"
  >
    <path
      d="M20.5 23.5h-17V.5h13l4 4z"
      stroke-linecap="round"
    />
    <path
      d="M11.5.5v2.001h1v5h-3V2.5M10.5 9.5h1M10.5 11.5h1M10.5 13.5h1M10.5 15.5h1M10.5 17.5h1M10.5 19.5h1M10.5 21.5h1M11.5 10.5h1M11.5 12.5h1M11.5 14.5h1M11.5 16.5h1M11.5 18.5h1M11.5 20.5h1"
      stroke-linecap="round"
    />
    <path
      d="M9.5 5.5H11"
    />
  </g>
</svg>
`;

exports[`renders the component with an additional class name 1`] = `
<svg
  class="Illustration my-extra-class"
  data-test-id="cf-ui-illustration"
  height="1em"
  viewBox="0 0 24 24"
  width="1em"
>
  <g
    fill="none"
    stroke="#000"
    stroke-linejoin="round"
    stroke-miterlimit="10"
  >
    <path
      d="M20.5 23.5h-17V.5h13l4 4z"
      stroke-linecap="round"
    />
    <path
      d="M11.5.5v2.001h1v5h-3V2.5M10.5 9.5h1M10.5 11.5h1M10.5 13.5h1M10.5 15.5h1M10.5 17.5h1M10.5 19.5h1M10.5 21.5h1M11.5 10.5h1M11.5 12.5h1M11.5 14.5h1M11.5 16.5h1M11.5 18.5h1M11.5 20.5h1"
      stroke-linecap="round"
    />
    <path
      d="M9.5 5.5H11"
    />
  </g>
</svg>
`;
